# ui-setup

./: README.md  pyproject.toml
ai-setup/: start.py
ai-setup/features/: clone_ui.py
ai-setup/features/clone_ui/: __init__.py  constants.py  tools.py
ai-setup/tools/: __init__.py
ai-setup/ui/: __init__.py
ui_setup/: start.py
ui_setup/features/clone_ui/: tools.py
