[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-setup"
version = "0.1.0"
description = "AI Setup CLI Tool"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Joaquim Cassano"}
]

[project.scripts]
ui-setup = "ai_setup.start:main"

[tool.setuptools.packages.find]
include = ["ai_setup*"]
